[package]
name = "nyxx-parser"
version = "0.1.0"
edition = "2018"
authors = ["Vlad Eminovici veminovici@hotmail.com"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/veminovici/nyxx"
description = """
Parser
"""
keywords = ["parser", "interpreter", "compiler"]
categories = ["compiler", "interpreter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"

[dev-dependencies]
env_logger = "0.9"
